--- a/src/assets/scss/core/sections/_common-info.scss
+++ b/src/assets/scss/core/sections/_common-info.scss
@@ -44,7 +44,7 @@
     z-index: 1;
 
     &-wrapper {
-      height: 30%;
+      height: 23%;
 
       .img-logo {
         object-fit: contain;
